# InterviewPrepare

./: .gitignore
codePractice/cmakeCommon/: printBuildInfo.cmake
codePractice/logger/: CMakeLists.txt
codePractice/logger/include/: asyncLog.h  fLog.h  iLog.h  logHelper.h  logQueue.h
codePractice/logger/src/: asyncLog.cpp  fLog.cpp  iLog.cpp  logHelper.cpp  logQueue.cpp  main.cpp
codePractice/sensorPipeline/: CMakeLists.txt
codePractice/sensorPipeline/include/: sensor.h
codePractice/sensorPipeline/src/: main.cpp  sensor.cpp
codePractice/stack/: CMakeLists.txt
codePractice/stack/include/: stack.h
codePractice/stack/src/: main.cpp  stack.cpp  stack.hpp
codePractice/stateMachine/: CMakeLists.txt
codePractice/stateMachine/include/: fwStateMachine.h  test.h
codePractice/stateMachine/src/: fwStateMachine.cpp  main.cpp  test.cpp
note/C++/: Deducing_a_type.md  Objects_and_value.md  RAII.md  class.md  constant_expressions.md  derived_classes.md  exception.md  exception_handling.md  lambdaExpressions.md  lamdaExpressions.md  object_LifeCycle.md  ownership.md  references.md  type.md  type_aliases.md
note/CMake/: MinimalPrj.md  SettingUpAProject.md  buildType.md  introduction.md
note/UnixOS/Chapter_1/: 1.1_History.md  1.2_SystemStructure.md  1.3_UserPerspective.md  1.4_OperatingSystemServices.md
plan/: Embedded_Cpp_1_Month_Interview_Roadmap.md  Week1_Cpp_Refresher_Checklist.md
